<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.login.SignUpFragment">

    <TextView
        android:id="@+id/labelSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etEmail"
        app:layout_constraintHorizontal_bias="0"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_mail_text"
        android:inputType="textEmailAddress"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/labelSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etFirstName"/>

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/etLastName" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toEndOf="@id/etFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/etFirstName"/>

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/etFirstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etPassword"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/etPhoneNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvAgreement"/>

    <TextView
        android:id="@+id/tvAgreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agreement_text"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:paddingHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signUpButton"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign up"
        android:textColor="@color/white"
        android:background="@drawable/registration_button_style"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/tvAgreement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tvSingingup"/>

    <TextView
        android:id="@+id/tvSingingup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_with_social_accounts"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/signUpButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/image_google"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/google"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/tvSingingup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/image_facebook"/>

    <ImageView
        android:id="@+id/image_facebook"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/facebook"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvSingingup"
        app:layout_constraintStart_toEndOf="@id/image_google"
        app:layout_constraintEnd_toStartOf="@id/image_twitter"/>

    <ImageView
        android:id="@+id/image_twitter"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/twitter"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvSingingup"
        app:layout_constraintStart_toEndOf="@id/image_facebook"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_account"
        android:layout_marginBottom="10dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/image_facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/have_account_Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"/>

    <TextView
        android:id="@+id/have_account_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log in"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/image_facebook"
        app:layout_constraintStart_toEndOf="@id/have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>