<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.login.ForgotPasswordFragment">

    <TextView
        android:id="@+id/label_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_forgot_password"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/instruction_text"
        app:layout_constraintHorizontal_bias="0"/>

    <TextView
        android:id="@+id/instruction_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/instruction_text"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toTopOf="@id/label_forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/email_forReset"
        app:layout_constraintHorizontal_bias="0"/>

    <EditText
        android:id="@+id/email_forReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_mail_text"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/instruction_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/resetButton"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Send me now"
        android:textColor="@color/white"
        android:background="@drawable/registration_button_style"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/email_forReset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>