<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.login.LoginFragment">

    <TextView
        android:id="@+id/label_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_log_in"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="70dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logInMail"
        app:layout_constraintHorizontal_bias="0"/>

    <EditText
        android:id="@+id/logInMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_mail_text"
        android:inputType="textEmailAddress"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/label_log_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logInPassword"/>

    <EditText
        android:id="@+id/logInPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/logInMail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/forgotPassword"/>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/logInPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Log in"
        android:textColor="@color/white"
        android:background="@drawable/registration_button_style"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvSingingup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_with_social_accounts"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/logInButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/image_google"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/google"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/tvSingingup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/image_facebook"/>

    <ImageView
        android:id="@+id/image_facebook"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/facebook"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvSingingup"
        app:layout_constraintStart_toEndOf="@id/image_google"
        app:layout_constraintEnd_toStartOf="@id/image_twitter"/>

    <ImageView
        android:id="@+id/image_twitter"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/twitter"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvSingingup"
        app:layout_constraintStart_toEndOf="@id/image_facebook"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account? "
        android:layout_marginBottom="10dp"
        android:textAlignment="textEnd"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/image_facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"/>

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Sign up"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/image_facebook"
        app:layout_constraintStart_toEndOf="@id/have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>