<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.intro.SplashFragment">

    <ImageView
        android:id="@+id/ivIntroScreen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/batman"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tvIntroTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="serif"
        android:text="@string/intro_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/skipBtn"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:background="@drawable/skip_btn_style"
        android:alpha="0.3"
        app:layout_constraintTop_toTopOf="@id/tvIntroTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tvIntroTitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Skip"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/skipBtn"
        app:layout_constraintStart_toStartOf="@id/skipBtn"
        app:layout_constraintEnd_toEndOf="@id/skipBtn"
        app:layout_constraintBottom_toBottomOf="@id/skipBtn"/>

    <TextView
        android:id="@+id/tvIntroText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/intro_text"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:paddingStart="15dp"
        android:paddingEnd="50dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvIntroDescription"/>

    <TextView
        android:id="@+id/tvIntroDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/intro_description"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:paddingStart="15dp"
        android:paddingEnd="50dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@id/nextBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/next_btn_style"
        android:text="Next"
        android:textColor="@color/white"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>